@@ -93,6 +93,7 @@ func TestGetProcess(t *testing.T) {
 		assert.True(t, (process.Pid > 0))
 		assert.True(t, (process.Ppid >= 0))
 		assert.True(t, (len(process.Name) > 0))
+		assert.True(t, (len(process.Username) > 0))
 		assert.NotEqual(t, "unknown", process.State)
 
 		// Memory Checks
